--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "@park/react-analytics",
   "version": "0.1.0",
   "description": "Analytics library for React applications",
+  "keywords": [
+    "react",
+    "analytics",
+    "tracking",
+    "google-analytics",
+    "google-analytics-4",
+    "ga4",
+    "gtag"
+  ],
   "type": "module",
   "main": "dist/react-analytics.umd.js",
   "module": "dist/react-analytics.es.js",
@@ -9,6 +18,7 @@
   "files": [
     "dist"
   ],
+  "sideEffects": false,
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -34,11 +44,6 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   },
-  "keywords": [
-    "react",
-    "analytics",
-    "tracking"
-  ],
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
   "repository": {
     "type": "git",
